--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(calc_AMP)
 export(calc_TAV)
 export(clear_output)
 export(convert_to_date)
+export(find_comments)
 export(mutate_cond)
 export(name_to_regex)
 export(read_casupro_eco)
